# aiaio

./: .gitignore  Makefile  example.txt  pyproject.toml  pytest.ini  requirements.txt  test.txt  tox.ini
.github/workflows/: python-package.yml
aiaio/: __init__.py  aio.py  iocontext_mt.py  iocontext_task.py
debian/: README.source  changelog  control  copyright  rules
debian/patches/: 0001-Remove-print.patch  series
pyaio/: __init__.py  aio.py  iocontext_mt.py  iocontext_task.py  pyaio.py
src/: Makefile  libaiotest.c  libaiotest.cc
tests/: test_aiofile.py
